# swapp

./: .gitignore  README.md  pyproject.toml  setup.cfg
catalogues/: __init__.py
swapp/ReorderingTemporalData/: __init__.py
swapp/catalogues/: __init__.py
swapp/data_calibration/: SpectroEnergies.py  __init__.py
swapp/dataframes/: InvestigateParkerSpiral.py  __init__.py  downloading.py
swapp/engineered_features/: PeakDetection.py  __init__.py  cold_ions.py  gaussian_fits.py  reference_MSH.py  searchcoilFFT.py  tangent_to_MP.py
swapp/make_plots/: plot_functions.py  plot_maps.py
swapp/neighbouringRegions/: __init__.py
swapp/tests/: __init__.py
swapp/windowing/: plots_windows.py
swapp/windowing/data/: labelled_days.ts  list_label_catalogues.ts  list_labelled_days.ts  small_prepared_data.pkl  small_prepared_omni.pkl  small_prepared_pos.pkl
swapp/windowing/gradient_boosting/: __init__.py
swapp/windowing/label_windows/: __init__.py
swapp/windowing/make_windows/: BL_multitask.json  __init__.py  utils.py
swapp/windowing/make_windows/MP/: __init__.py  utils.py
tests/: __init__.py  old_tests.py  tests_stride=winlength.py
windowing/: plots_windows.py
windowing/make_windows/: __init__.py  utils.py
windowing/make_windows/MP/: __init__.py  utils.py
windowing/make_windows/labels/: __init__.py  utils.py
windowing/make_windows/nodata/: utils.py
windowing/make_windows/tests/: __init__.py
windows/windowing/: plots_windows.py
windows/windowing/gradient_boosting/: __init__.py
windows/windowing/make_windows/: __init__.py  utils.py
(+8 files in other folders)
